<resources>
    <string name="app_name">TC-Chess Board</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password</string>
    <string name="login">Login</string>
    <string name="or">Or</string>
    <string name="register_new_account">Register New Account</string>
    <string name="register">Register</string>
    <string name="repeat_password">Repeat password</string>
    <string name="email_address">Email address</string>
    <string name="send_email">Send email</string>
    <string name="welcome">Welcome!</string>
    <string name="change_password">Change password</string>
    <string name="add_users_to_board">Add Users to Board</string>
    <string name="new_password">New password</string>
    <string name="old_password">Old password</string>
    <string name="username">Username:</string>
    <string name="scan_qr_code">Scan QR-code</string>
    <string name="or_enter">Or Enter:</string>
    <string name="board_id">Board ID</string>
    <string name="register_admin_user">Register Admin User:</string>
    <string name="serial_number">Serial Number</string>
    <string name="register_code">Register Code</string>
    <string name="hello_new_board_owner">Hello New Board Owner!</string>
    <string name="_30_min">30 min</string>
    <string name="_15_min">15 min</string>
    <string name="no_clock">No clock</string>
    <string name="start_game">Start Game</string>
    <string name="game_settings">Game Settings</string>
    <string name="difficulty_level">Difficulty level</string>
    <string name="user">User:</string>
    <string name="_1_2_3_4_5_6_7_8_9_10">1 ... 2 ... 3 ... 4 ... 5 .... 6 ... 7 ... 8 ... 9 ... 10</string>
    <string name="white">White</string>
    <string name="play_as">Play as</string>
    <string name="account_settings">Account Settings</string>
    <string name="register_board">Register Board</string>
    <string name="connect_to_board">Connect to Board</string>
    <string name="find_online_player">Find online player</string>
    <string name="play_against_board">Play against board</string>
    <string name="previous_move">Previous move</string>
    <string name="your_move">Your move</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="confirm_move">Confirm move</string>
    <string name="b_king">B-King</string>
    <string name="b_queen">B-Queen</string>
    <string name="b_bishop">B-Bishop</string>
    <string name="b_knight">B-Knight</string>
    <string name="b_rook">B-Rook</string>
    <string name="b_pawn">B-Pawn</string>
    <string name="w_king">W-King</string>
    <string name="w_queen">W-Queen</string>
    <string name="w_bishop">W-Bishop</string>
    <string name="w_knight">W-Knight</string>
    <string name="w_rook">W-Rook</string>
    <string name="w_pawn">W-Pawn</string>
    <string name="black_wins">Black Wins!</string>
    <string name="play_again">Play again</string>
    <string name="white_wins">White wins!</string>
    <string name="registered_users">Registered Users</string>
    <string name="add_user">Add user</string>
</resources>