<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".Lobby">


    <ImageView
        android:id="@+id/black_king"
        android:layout_width="wrap_content"
        android:layout_height="127dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="129dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="151dp"
        android:src="@mipmap/black_king" />

    <EditText
        android:id="@+id/usernameL"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="80dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="432dp"
        android:background="#CCCCCC"
        android:hint="@string/user_name"
        android:inputType="text"
        android:paddingStart="15dp" />



    <EditText
        android:id="@+id/passwordL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/usernameL"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="80dp"
        android:layout_marginTop="-390dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="335dp"
        android:background="#CCCCCC"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="15dp" />

    <Button
        android:id="@+id/login"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordL"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="130dp"
        android:layout_marginTop="-300dp"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="255dp"
        android:text="@string/login" />

    <Button
        android:id="@+id/forgotPassword"
        android:layout_width="227dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="88dp"
        android:layout_marginTop="-250dp"
        android:layout_marginEnd="96dp"
        android:layout_marginBottom="209dp"
        android:backgroundTint="@color/cardview_dark_background"
        android:text="@string/forgot_password"
        android:textColor="@color/White" />

    <TextView
        android:id="@+id/textOr"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:fontFamily="monospace"
        android:text="@string/or"
        android:textAlignment="center"
        android:textSize="24sp"
        android:layout_below="@+id/forgotPassword"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="110dp"
        android:layout_marginTop="-190dp"
        android:layout_marginEnd="110dp"
        android:layout_marginBottom="150dp"/>

    <Button
        android:id="@+id/newUser"
        android:layout_width="191dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textOr"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="90dp"
        android:layout_marginTop="-120dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="65dp"
        android:text="@string/register_new_account" />


</RelativeLayout>