<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Lobby">


    <TextView
        android:id="@+id/title"
        android:layout_width="346dp"
        android:layout_height="59dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="33dp"
        android:fontFamily="sans-serif-black"
        android:src="@mipmap/black_king"
        android:text="@string/account_settings"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="50dp"
        android:background="@android:color/darker_gray" />


    <TextView
        android:id="@+id/as_username"
        android:layout_width="170dp"
        android:layout_height="46dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="195dp"
        android:layout_marginTop="197dp"
        android:layout_marginEnd="46dp"
        android:fontFamily="sans-serif-black"
        android:src="@mipmap/black_king"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="128dp"
        android:layout_height="46dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="58dp"
        android:layout_marginTop="198dp"
        android:layout_marginEnd="225dp"
        android:fontFamily="sans-serif-black"
        android:src="@mipmap/black_king"
        android:text="@string/username"
        android:textAlignment="center"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/as_old_password"
        android:layout_width="203dp"
        android:layout_height="52dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="104dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="104dp"
        android:layout_marginBottom="415dp"
        android:background="#CCCCCC"
        android:hint="@string/old_password"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/as_new_password"
        android:layout_width="wrap_content"
        android:layout_height="53dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="104dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="104dp"
        android:layout_marginBottom="345dp"
        android:background="#CCCCCC"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/as_change_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="106dp"
        android:layout_marginTop="276dp"
        android:layout_marginEnd="105dp"
        android:layout_marginBottom="257dp"
        android:backgroundTint="@color/Black"
        android:text="@string/change_password"
        android:textColor="@color/White" />

    <Button
        android:id="@+id/as_add_u_to_board"
        android:layout_width="199dp"
        android:layout_height="45dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="106dp"
        android:layout_marginTop="390dp"
        android:layout_marginEnd="105dp"
        android:layout_marginBottom="147dp"
        android:backgroundTint="@color/Red"
        android:text="@string/add_users_to_board"
        android:visibility="gone" />


</RelativeLayout>